# otto-gif-mode

./: .gitmodules  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  gif.cpp
